Update to version 0.1.15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(SS_gwas)
 export(See)
 export(design.Z)
 export(genesetmap)
+export(genetrait)
 export(make.full)
 export(manhattan)
 export(manhattan.plus)
