--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ useDynLib(RAINBOWR)
 
 export(CalcThreshold)
 export(cumsumPos)
+export(estPhylo)
 export(EM3.cpp)
 export(EM3.linker.cpp)
 export(EMM.cpp)
@@ -48,6 +49,7 @@ import(rrBLUP)
 import(tcltk)
 import(pbmcapply)
 import(optimx)
+import(ape)
 importFrom("grDevices", "dev.cur", "dev.new", "dev.next", "dev.off",
             "dev.set", "png", "rainbow")
 importFrom("graphics", "axis", "boxplot", "legend", "lines", "par",
