--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RAINBOWR
 Type: Package
 Title: Genome-Wide Association Study with SNP-Set Methods
-Version: 0.1.18
+Version: 0.1.19
 Authors@R: c(
   person("Kosuke", "Hamazaki", email = "hamazaki@ut-biomet.org", role = c("aut", "cre")),
   person("Hiroyoshi", "Iwata", email = "aiwata@mail.ecc.u-tokyo.ac.jp", role = c("aut", "ctb"))
@@ -22,7 +22,8 @@ Imports: Rcpp,
          pbmcapply,
          optimx,
          methods,
-         ape
+         ape,
+         stringr
 LinkingTo: Rcpp, RcppEigen
 RoxygenNote: 7.1.0
 Suggests: 
