--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CalcThreshold)
 export(calcGRM)
 export(cumsumPos)
 export(estPhylo)
+export(estNetwork)
 export(EM3.cpp)
 export(EM3.linker.cpp)
 export(EMM.cpp)
@@ -65,3 +66,4 @@ importFrom("utils", "menu", "packageVersion", "setTxtProgressBar",
            "str", "txtProgressBar")
 importFrom("grDevices", "jpeg", "pdf", "tiff")
 importFrom("stats", "as.dist", "chisq.test", "cutree", "hclust", "kmeans")
+importFrom("pegas", "mst", "msn", "rmst")
