--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RAINBOWR
 Type: Package
 Title: Genome-Wide Association Study with SNP-Set Methods
-Version: 0.1.20
+Version: 0.1.21
 Authors@R: c(
   person("Kosuke", "Hamazaki", email = "hamazaki@ut-biomet.org", role = c("aut", "cre")),
   person("Hiroyoshi", "Iwata", email = "aiwata@mail.ecc.u-tokyo.ac.jp", role = c("aut", "ctb"))
@@ -24,9 +24,14 @@ Imports: Rcpp,
          methods,
          ape,
          stringr,
-         pegas
+         pegas,
+         ggplot2,
+         ggtree,
+         scatterpie,
+         phylobase,
+         haplotypes
 LinkingTo: Rcpp, RcppEigen
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Suggests: 
     knitr,
     rmarkdown
