Update to version 0.1.21

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(manhattan.plus)
 export(manhattan2)
 export(manhattan3)
 export(modify.data)
+export(plotHaploNetwork)
+export(plotPhyloTree)
 export(qq)
 export(score.calc)
 export(score.calc.MC)
@@ -43,20 +45,13 @@ export(score.linker.cpp)
 export(spectralG.cpp)
 export(welcome_to_RGWAS)
 import(MASS)
-import(Matrix)
 import(Rcpp)
-import(cluster)
 import(rgl)
-import(rrBLUP)
 import(tcltk)
 import(pbmcapply)
 import(optimx)
-import(ape)
 import(stringr)
-import(ggtree)
 import(ggplot2)
-import(scatterpie)
-import(phylobase)
 importFrom("grDevices", "dev.cur", "dev.new", "dev.next", "dev.off",
             "dev.set", "png", "rainbow")
 importFrom("graphics", "axis", "boxplot", "legend", "lines", "par",
@@ -70,5 +65,11 @@ importFrom("utils", "menu", "packageVersion", "setTxtProgressBar",
            "str", "txtProgressBar")
 importFrom("grDevices", "jpeg", "pdf", "tiff")
 importFrom("stats", "as.dist", "chisq.test", "cutree", "hclust", "kmeans")
+importFrom("Matrix", "sparseMatrix")
 importFrom("pegas", "mst", "msn", "rmst")
 importFrom("haplotypes", "parsimnet")
+importFrom("cluster", "pam")
+importFrom("ape", "nj", "dist.nodes", "plot.phylo", "nodelabels", "tiplabels")
+importFrom("ggtree", "ggtree", "aes", "nodepie", "geom_inset")
+importFrom("phylobase", "phylo4", "phylo4d", "nodeId", "nodeData", "nNodes")
+importFrom("scatterpie", "geom_scatterpie")
