--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports: Rcpp,
          ggtree,
          scatterpie,
          phylobase,
-         haplotypes
+         haplotypes,
+         ggimage
 LinkingTo: Rcpp, RcppEigen
 RoxygenNote: 7.1.1
 Suggests: 
