--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,14 +44,12 @@ export(score.cpp)
 export(score.linker.cpp)
 export(spectralG.cpp)
 export(welcome_to_RGWAS)
-import(MASS)
 import(Rcpp)
-import(rgl)
+import(plotly)
 import(tcltk)
 import(pbmcapply)
 import(optimx)
 import(stringr)
-import(ggplot2)
 import(ggimage)
 importFrom("grDevices", "dev.cur", "dev.new", "dev.next", "dev.off",
             "dev.set", "png", "rainbow")
@@ -68,6 +66,9 @@ importFrom("grDevices", "jpeg", "pdf", "tiff")
 importFrom("stats", "as.dist", "chisq.test", "cutree",
            "hclust", "kmeans", "cmdscale")
 importFrom("Matrix", "sparseMatrix")
+importFrom("MASS", "mvrnorm", "ginv")
+importFrom("ggplot2", "ggtitle", "ggplot", "aes", "scale_fill_manual",
+           "coord_equal", "xlab", "ylab", "geom_segment", ".data")
 importFrom("pegas", "mst", "msn", "rmst")
 importFrom("haplotypes", "parsimnet")
 importFrom("cluster", "pam")
@@ -78,3 +79,5 @@ importFrom("scatterpie", "geom_scatterpie")
 importFrom("rrBLUP", "A.mat")
 importFrom("expm", "expm")
 importFrom("pbapply", "pblapply")
+importFrom("here", "here")
+importFrom("htmlwidgets", "saveWidget")
