--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,3 +79,4 @@ importFrom("expm", "expm")
 importFrom("pbapply", "pblapply")
 importFrom("here", "here")
 importFrom("htmlwidgets", "saveWidget")
+importFrom("Rfast", "Dist")
