--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RAINBOWR
 Type: Package
 Title: Genome-Wide Association Study with SNP-Set Methods
-Version: 0.1.26
+Version: 0.1.28
 Authors@R: c(
   person("Kosuke", "Hamazaki", email = "hamazaki@ut-biomet.org", role = c("aut", "cre")),
   person("Hiroyoshi", "Iwata", email = "aiwata@mail.ecc.u-tokyo.ac.jp", role = c("aut", "ctb"))
@@ -22,20 +22,28 @@ Imports: Rcpp,
          ape,
          stringr,
          pegas,
-         ggplot2,
-         ggtree,
-         scatterpie,
-         phylobase,
-         haplotypes,
          rrBLUP,
          expm,
          here,
          htmlwidgets,
-         Rfast
+         Rfast,
+         gaston,
+         MM4LMM
 LinkingTo: Rcpp, RcppEigen
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: 
     knitr,
     rmarkdown,
-    plotly
+    plotly,
+    haplotypes,
+    adegenet,
+    ggplot2,
+    ggtree,
+    scatterpie,
+    phylobase,
+    furrr,
+    future,
+    progressr,
+    foreach,
+    doParallel
 VignetteBuilder: knitr
