Update to version 0.1.30

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ useDynLib(RAINBOWR)
 export(adjustGRM)
 export(CalcThreshold)
 export(calcGRM)
+export(convertBlockList)
 export(cumsumPos)
 export(estPhylo)
 export(estNetwork)
@@ -16,7 +17,6 @@ export(EMM2.cpp)
 export(is.diag)
 export(MAF.cut)
 export(RGWAS.epistasis)
-export(RGWAS.menu)
 export(RGWAS.multisnp)
 export(RGWAS.multisnp.interaction)
 export(RGWAS.normal)
