Update to version 0.1.32

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,3 +89,4 @@ importFrom("gaston", "lmm.aireml", "lmm.diago")
 importFrom("MM4LMM", "MMEst")
 importFrom("stats", "prcomp")
 importFrom("parallel", "mclapply", "detectCores")
+importFrom("R.utils", "extract")
